--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -27,3 +27,57 @@ html {
 section {
     padding: 80px 0;
 }
+
+.box {
+    padding: 1%;
+}
+
+/* ===== HEADENIGS ===== */
+h1,
+h2,
+h3 {
+    font-weight: 300;
+    text-transform: uppercase;
+}
+
+h1 {
+    margin-top: 0;
+    /* margin-bottom: 20px; */
+    color: white;
+    font-size: 440%;
+    word-spacing: 4px;
+    letter-spacing: 1px; 
+}
+
+h2 {
+    font-size: 180%;
+    word-spacing: 2px;
+    text-align: center;
+    margin-bottom: 30px;
+    letter-spacing: 1px;
+}
+
+h3 {
+    font-size: 110%;
+    margin-bottom: 15px;
+}
+
+
+/*=============================*/
+/*= HEADER                    =*/
+/*=============================*/
+header {
+    background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url(img/back_ground.jpg);
+    background-size: cover;
+    background-position: center;
+    height: 100vh;
+    background-attachment: fixed;
+}
+
+.logo-text-box {
+    position: absolute;
+    width: 1140px;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
