--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -44,7 +44,7 @@ h1 {
     margin-top: 0;
     /* margin-bottom: 20px; */
     color: white;
-    font-size: 440%;
+    font-size: 440%; 
     word-spacing: 4px;
     letter-spacing: 1px; 
 }
@@ -57,11 +57,19 @@ h2 {
     letter-spacing: 1px;
 }
 
+h2:after { display: block;
+    height: 2px;
+    background-color: #e67e22;
+    content: " ";
+    width: 100px;
+    margin: 0 auto;
+    margin-top: 30px;}
+
+
 h3 {
     font-size: 110%;
     margin-bottom: 15px;
 }
-
 
 /*=============================*/
 /*= HEADER                    =*/
@@ -81,3 +89,30 @@ header {
     left: 50%;
     transform: translate(-50%, -50%);
 }
+
+.main-nav {
+    float: right;
+    list-style: none;
+    margin-top: 25px;
+    margin-right: 40px;
+    font-size: 120%;
+}
+
+.main-nav li {
+    display: inline-block;
+    margin-left: 40px;
+}
+
+.main-nav li a:link,
+.main-nav li a:visited {
+    padding: 8px 0;
+    color: white;
+    text-decoration: none;
+    text-transform: uppercase;
+    font-size: 90%;
+    border-bottom: 4px solid transparent;
+    transition: border-bottom 0.2s;
+}
+
+.main-nav li a:hover,
+.main-nav li a:active {border-bottom: 4px solid #3bff00;}
