--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -149,4 +149,10 @@ header {
     line-height: 145%; 
     width: 70%;
     margin-left: 15%;
+    font-size: 140%;
+}
+.long-copy:last-child {
+    content: " ";
+    margin: 0 auto;
+    margin-bottom: 100px;
 }
