--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -25,16 +25,15 @@ html {
 }
 
 section {
-    padding: 80px 0;
+    padding: 50px 0;
 
-    clear: both; /*//////////////////*/
 }
 
 .box {
     padding: 1%;
 }
 
-/* ===== HEADENIGS ===== */
+/* ===== HEADINGS ===== */
 h1,
 h2,
 h3 {
@@ -73,6 +72,36 @@ h3 {
     margin-bottom: 15px;
 }
 
+/* ===== PARAGRAPHS ===== */
+.long-copy {
+    line-height: 145%; 
+    width: 70%;
+    margin-left: 15%;
+    font-size: 140%;
+}
+.long-copy:last-child {
+    content: " ";
+    margin: 0 auto;
+    margin-bottom: 100px;
+}
+
+/* ===== LINKS ===== */
+a,
+a:visited {
+    text-decoration: none;
+    color: #2cbb00;
+    padding-bottom: 1px;
+    border-bottom: 1px solid #2cbb00;
+    transition: border-bottom 0.5s, color 0.5s
+}
+
+a:hover,
+a:active {
+    color: #555;
+    border-bottom: 1px solid transparent;
+}
+
+
 /*=============================*/
 /*= HEADER                    =*/
 /*=============================*/
@@ -84,18 +113,12 @@ header {
     background-attachment: fixed;
 }
 
-.central-logo-margin {
-    margin-left: 20px;
-
-    width: 20px;
-    height: 50px;
-}
 
 .logo-text-box {
     position: relative;
     width: auto;
-    left: 50%;
-    top: 200px;
+    left: -15%;
+    top: 250px;
     text-align: right;
     /* transform: translate(60%, 90%); */
 }
@@ -105,7 +128,7 @@ header {
     height: 400px;
     width: auto;
     /* float: left; */
-    left: 100%;
+    left: 40%;
     top: 40px;
 }
 
@@ -144,15 +167,35 @@ header {
 .main-nav li a:hover,
 .main-nav li a:active {border-bottom: 6px solid #3bff00;}
 
-/* ===== PARAGRAPHS ===== */
-.long-copy {
-    line-height: 145%; 
-    width: 70%;
-    margin-left: 15%;
-    font-size: 140%;
+/*=============================*/
+/*= ABOUT ME                  =*/
+/*=============================*/
+.about-me {
+    background-color: rgb(248, 248, 248)
 }
-.long-copy:last-child {
-    content: " ";
-    margin: 0 auto;
-    margin-bottom: 100px;
+
+/*=============================*/
+/*= BLOG                      =*/
+/*=============================*/
+.row-text-blog {
+    margin-bottom: 30px;
 }
+.blog-text {
+    margin-right: 150px;
+}
+
+.blog-text h3 {
+    border-bottom: 2px solid #3bff00;
+    width: 63px;    
+}
+
+.more-button {
+    position: relative;
+    margin-top: 20px;
+    font-weight: 400;
+    font-size: 120%;
+    left: 88%;
+}
+
+
+
