--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -179,7 +179,7 @@ header {
 /*= BLOG                      =*/
 /*=============================*/
 .section-my-blog {
-    height: 100vh;
+    /* height: 100vh; */
 }
 
 .row-text-blog {
@@ -206,10 +206,15 @@ header {
 /*= SHOP                      =*/
 /*=============================*/
 
-.section-shop { padding: 0; }
+.section-shop { 
+    padding: 0; 
+    height: auto;
+    
+    margin-bottom: 100px;
+}
 .shop-showcase {
     list-style: none;
-    width: 100%;   
+    width: 100%; 
 }
 
 .shop-showcase li {
@@ -226,7 +231,7 @@ header {
 }
 
 .shop-photo img {
-    opacity: 0.6;
+    opacity: 0.7;
     width: 100%;
     height: auto;
     transform: scale(1.25);
@@ -237,9 +242,6 @@ header {
     transform: scale(1.035);
     opacity: 1;
 }
-
-
-
 
 
 
