--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -68,7 +68,7 @@ h2 {
 
 h2:after { display: block;
     height: 6px;
-    background-color: #3bff00;
+    background-color: #02b200;
     content: " ";
     width: 100px;
     margin: 0 auto;
@@ -103,7 +103,7 @@ h3 {
 .icon-big {
     font-size: 350%;
     display: block;
-    color: #3bff00;
+    color: #02b200;
     margin-bottom: 10px;
 }
 
@@ -111,9 +111,9 @@ h3 {
 a,
 a:visited {
     text-decoration: none;
-    color: #2cbb00;
+    color: #02b200;
     padding-bottom: 1px;
-    border-bottom: 1px solid #2cbb00;
+    border-bottom: 1px solid #02b200;
     transition: border-bottom 0.5s, color 0.5s
 }
 
@@ -121,6 +121,15 @@ a:hover,
 a:active {
     color: #555;
     border-bottom: 1px solid transparent;
+}
+
+/*=== BUTTONS ===*/
+.more-button {
+    position: relative;
+    margin-top: 20px;
+    font-weight: 400;
+    font-size: 120%;
+    left: 88%;
 }
 
 
@@ -161,7 +170,6 @@ header {
     margin-top: 20px;
 }
 
-
 .main-nav {
     float: right;
     list-style: none;
@@ -187,7 +195,7 @@ header {
 }
 
 .main-nav li a:hover,
-.main-nav li a:active {border-bottom: 6px solid #3bff00;}
+.main-nav li a:active {border-bottom: 6px solid #02b200;}
 
 /*=============================*/
 /*= ABOUT ME                  =*/
@@ -198,26 +206,18 @@ header {
 }
 
 /*=============================*/
-/*= BLOG                      =*/
+/*= NEWS                      =*/
 /*=============================*/
-.row-text-blog {
+.row-text-news {
     margin-bottom: 30px;
 }
-.blog-text {
+.news-text {
     margin-right: 150px;
 }
 
-.blog-text h3 {
-    border-bottom: 2px solid #3bff00;
+.news-text h3 {
+    border-bottom: 2px solid #02b200;
     width: 63px;    
-}
-
-.more-button {
-    position: relative;
-    margin-top: 20px;
-    font-weight: 400;
-    font-size: 120%;
-    left: 88%;
 }
 
 /*=============================*/
