--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -34,7 +34,7 @@ html {
 }
 
 section {
-    padding: 80px 0;
+    padding: 50px 0;
 
 }
 
@@ -202,7 +202,7 @@ header {
 /*=============================*/
 .section-about-me {
     background-color: rgb(248, 248, 248);
-    height: 100vh;
+   
 }
 
 /*=============================*/
@@ -263,8 +263,49 @@ header {
 /*=============================*/
 
 .section-how-to-buy {
-    background-color: rgb(243, 243, 243);
- 
+    background-color: rgb(243, 243, 243); 
+}
+
+
+/*=============================*/
+/*= TESTIMONIALS              =*/
+/*=============================*/
+.section-testimonials {
+    background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),url(img/clients-says.jpg);
+    background-size: cover;
+    color: white;
+    background-attachment: fixed;
+}
+
+blockquote {
+    padding: 2%;
+    font-style: italic;
+    line-height: 145%;
+    position: relative;
+    margin-top: 40px;
+
+}
+
+blockquote:before {
+    content: "\201C";
+    font-size: 500%;
+        display: block;
+    position: absolute;
+    top: -5px;
+    left: -3px;
+}
+
+cite {
+    font-size: 90%;
+    margin-top: 25px;
+    display: block;
+}
+
+cite img {
+    height: 45px;
+    border-radius: 50%;
+    margin-right: 10px;
+    vertical-align: middle;
 }
 
 
