--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -313,14 +313,16 @@ cite img {
 /*=============================*/
 .section-contacts h3{
     text-transform: uppercase;
+    text-align: center;
     font-size: 140%; 
     margin-top: 30px; 
 }
 
 .section-contacts p {
     font-size: 120%;
+    text-align: center;
 }
 
-/* .icon-contacts {
+.icon-contacts {
     margin: 0 auto;
-} */
+}
