--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -388,6 +388,7 @@ cite img {
 
 .contact-form {
     width: 90%;
+    padding-left: 30px;
     /* margin: 0 auto;      */
 }
 
@@ -414,6 +415,7 @@ textarea {
     text-align: center;
     font-size: 120%; 
     margin-bottom: 30px;
+    border-bottom: 2px solid #02b200;
 }
 
                     
