Fix icon bar and to top button and scroll

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -540,20 +540,19 @@ footer p {
     text-align:center;
     padding:5px;
     position:fixed;
-    bottom:10px; /* отступ кнопки от нижнего края страницы*/
+    bottom: -90px; /* отступ кнопки от нижнего края страницы*/
     right:50px;
     cursor:pointer;
-    display:none;
-    color:#333;
+    /* display:none; */
+    color:#02b200;
     font-family:verdana;
     font-size:18px;
     z-index: 2000;
-    font-size: 76px;
-  
+    font-size: 76px;  
   }
   
   #toTop:hover {
-    color: #02b200;
+    color: #555;
   }
 
 /* === END === */
