--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -35,7 +35,6 @@ html {
 
 section {
     padding: 50px 0;
-
 }
 
 .box {
@@ -99,8 +98,7 @@ h3 {
     display: block;
     color: #02b200;
     margin: 0 auto;
-    margin-bottom: 10px;
-    
+    margin-bottom: 10px;    
 }
 
 /* ===== LINKS ===== */
@@ -173,6 +171,17 @@ button[type=submit]:active {
 .btn-ghost:active {
     border: 1px solid #02b200;
     color: white;
+}
+
+.btn-flag {
+    width: 30px;
+    height: auto;
+    background: transparent;
+}
+
+.btn-flag:hover {
+   
+
 }
 
 /*=============================*/
@@ -517,8 +526,7 @@ footer p {
     transition: all 0.3s ease;
     color: white;
     font-size: 140%;
-    border: 0;    
-
+    border: 0;  
   }
   
   .icon-bar a:hover {
@@ -527,7 +535,6 @@ footer p {
     border-bottom-right-radius: 15px;
     font-size: 180%;
     width: 70px;
-
   }
 
 /*=============================*/
