--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -35,9 +35,10 @@ html {
 
 section {
     padding: 50px 0;
+    min-height: 100vh;
 }
 
-.box {
+F.box {
     padding: 1%;
 }
 
@@ -175,12 +176,14 @@ button[type=submit]:active {
 
 .flags {
     width: 100px;
-    height: auto;
+    height: 20px;
     margin-top: 27px;
+    position: relative;
+    top: 27px;
 }
 
 .btn-flag {
-    width: auto;
+    width: 40px;
     height: 25px;
     /* background: transparent; */
 }
