--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -556,25 +556,39 @@ footer p {
 /*= TO TOP                    =*/
 /*=============================*/
   #toTop {
-    width:50px;
-    /* border:1px solid #ccc; */
-    background:transparent;
+    width:76px;
+    height: 76px;
+    background: transparent;
     text-align:center;
-    padding:5px;
-    position:fixed;
-    bottom: -90px; /* отступ кнопки от нижнего края страницы*/
-    right:50px;
+    position: fixed;;
+    bottom: 30px; /* отступ кнопки от нижнего края страницы*/
+    right:20px;
     cursor:pointer;
-    /* display:none; */
     color:#02b200;
-    font-family:verdana;
-    font-size:18px;
     z-index: 2000;
     font-size: 76px;    
+    border-radius: 50%;
+ 
   }
-  
+
   #toTop:hover {
     color: #555;
+  }
+  .toTopBackGround {
+    width: 58px;
+    height: 60px;
+    margin-right: 9px;
+    margin-bottom: 9px;
+    background: white;
+    position: fixed;
+    bottom: 30px; /* отступ кнопки от нижнего края страницы*/
+    right:20px;
+    cursor:pointer;
+    border-radius: 50%;
+    -webkit-box-shadow: 10px 10px 26px -10px rgba(0,0,0,0.75);
+    -moz-box-shadow: 10px 10px 26px -10px rgba(0,0,0,0.75);
+    box-shadow: 10px 10px 26px -10px rgba(0,0,0,0.75);  
+
   }
 
 /* === END === */
