--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -530,6 +530,10 @@ footer p {
     z-index: 2000;
     border-top-right-radius: 15px;
     border-bottom-right-radius: 15px;
+
+    -webkit-box-shadow: 10px 10px 26px -10px rgba(0,0,0,0.95);
+    -moz-box-shadow: 10px 10px 26px -10px rgba(0,0,0,0.85);
+    box-shadow: 10px 10px 26px -10px rgba(0,0,0,0.9);
   }
   
   .icon-bar a {
@@ -550,51 +554,46 @@ footer p {
     border-bottom-right-radius: 15px;
     font-size: 180%;
     width: 70px;
+    -webkit-box-shadow: 0px 10px 26px -10px rgba(0,0,0,0.95);
+    -moz-box-shadow: 0px 10px 26px -10px rgba(0,0,0,0.85);
+    box-shadow: 0px 10px 26px -10px rgba(0,0,0,0.9);
   }
 
 /*=============================*/
 /*= TO TOP                    =*/
 /*=============================*/
   #toTop {
-     width:76px;
+    width:76px;
     height: 76px; 
-   /* background: transparent;
-    text-align:center;
-    position: fixed;;
-    bottom: 30px; /* отступ кнопки от нижнего края страницы
+    position: fixed; 
+    bottom: 30px; /* отступ кнопки от нижнего края страницы*/
     right:20px;
-    cursor:pointer;
-    color:#02b200;
-    z-index: 2000;
-    font-size: 76px;    
-    border-radius: 50%; */
- 
   }
 
-  #toTop:hover {
+  #toTopImg:hover {
     color: #555;
   }
+
   .toTopBackGround {
     width: 60px;
     height: 60px;
-    margin-left: 9px;
-    margin-top: 9px;
-    /* margin-right: 9px;
-    margin-bottom: 9px; */
     background: white;
-    position: fixed;
     bottom: 30px; /* отступ кнопки от нижнего края страницы*/
     right:20px;
     cursor:pointer;
     border-radius: 50%;
-    -webkit-box-shadow: 10px 10px 26px -10px rgba(0,0,0,0.75);
-    -moz-box-shadow: 10px 10px 26px -10px rgba(0,0,0,0.75);
-    box-shadow: 10px 10px 26px -10px rgba(0,0,0,0.75);
-    z-index: 1999;  
-
+    -webkit-box-shadow: 10px 10px 26px -10px rgba(0,0,0,0.95);
+    -moz-box-shadow: 10px 10px 26px -10px rgba(0,0,0,0.85);
+    box-shadow: 10px 10px 26px -10px rgba(0,0,0,0.9);
     z-index: 2000;
     font-size: 76px; 
+  }
 
+  #toTopImg {
+      color: #02b200;
+      position: relative; 
+      top: -8px;
+      left: -8px;
   }
 
 /* === END === */
