--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -1,6 +1,14 @@
-/*=============================*/
-/*= BASIC SETUP               =*/
-/*=============================*/
+
+/*
+.########.....###.....######..####..######......######..########.########.##.....##.########.
+.##.....##...##.##...##....##..##..##....##....##....##.##..........##....##.....##.##.....##
+.##.....##..##...##..##........##..##..........##.......##..........##....##.....##.##.....##
+.########..##.....##..######...##..##...........######..######......##....##.....##.########.
+.##.....##.#########.......##..##..##................##.##..........##....##.....##.##.......
+.##.....##.##.....##.##....##..##..##....##....##....##.##..........##....##.....##.##.......
+.########..##.....##..######..####..######......######..########....##.....#######..##.......
+*/
+
 * {
     margin: 0;
     padding: 0;
@@ -25,9 +33,23 @@ html {
     visibility: hidden;
 }
 
-/*=============================*/
-/*= REUSABLE COMPONENTS       =*/
-/*=============================*/
+/*
+.########..########.##.....##..######.....###....########..##.......########...
+.##.....##.##.......##.....##.##....##...##.##...##.....##.##.......##.........
+.##.....##.##.......##.....##.##........##...##..##.....##.##.......##.........
+.########..######...##.....##..######..##.....##.########..##.......######.....
+.##...##...##.......##.....##.......##.#########.##.....##.##.......##.........
+.##....##..##.......##.....##.##....##.##.....##.##.....##.##.......##.........
+.##.....##.########..#######...######..##.....##.########..########.########...
+..######...#######..##.....##.########...#######..##....##.########.##....##.########..######.
+.##....##.##.....##.###...###.##.....##.##.....##.###...##.##.......###...##....##....##....##
+.##.......##.....##.####.####.##.....##.##.....##.####..##.##.......####..##....##....##......
+.##.......##.....##.##.###.##.########..##.....##.##.##.##.######...##.##.##....##.....######.
+.##.......##.....##.##.....##.##........##.....##.##..####.##.......##..####....##..........##
+.##....##.##.....##.##.....##.##........##.....##.##...###.##.......##...###....##....##....##
+..######...#######..##.....##.##.........#######..##....##.########.##....##....##.....######.
+*/
+
 .row {
     max-width: 1140px;
     margin: 0 auto;
@@ -42,7 +64,16 @@ section {
     padding: 1%;
 }
 
-/* ===== HEADINGS ===== */
+/*
+.##.....##.########....###....########..####.##....##..######....######.
+.##.....##.##.........##.##...##.....##..##..###...##.##....##..##....##
+.##.....##.##........##...##..##.....##..##..####..##.##........##......
+.#########.######...##.....##.##.....##..##..##.##.##.##...####..######.
+.##.....##.##.......#########.##.....##..##..##..####.##....##........##
+.##.....##.##.......##.....##.##.....##..##..##...###.##....##..##....##
+.##.....##.########.##.....##.########..####.##....##..######....######.
+*/
+
 h1,
 h2 {
     font-weight: 300;
@@ -80,7 +111,15 @@ h3 {
     margin-bottom: 10px;
 }
 
-/* ===== PARAGRAPHS ===== */
+/*
+.########.....###....########.....###.....######...########.....###....########..##.....##..######.
+.##.....##...##.##...##.....##...##.##...##....##..##.....##...##.##...##.....##.##.....##.##....##
+.##.....##..##...##..##.....##..##...##..##........##.....##..##...##..##.....##.##.....##.##......
+.########..##.....##.########..##.....##.##...####.########..##.....##.########..#########..######.
+.##........#########.##...##...#########.##....##..##...##...#########.##........##.....##.......##
+.##........##.....##.##....##..##.....##.##....##..##....##..##.....##.##........##.....##.##....##
+.##........##.....##.##.....##.##.....##..######...##.....##.##.....##.##........##.....##..######.
+*/
 .long-copy {
     line-height: 145%; 
     width: 70%;
@@ -93,7 +132,15 @@ h3 {
     line-height: 145%;
 }
 
-/* ===== ICONS ===== */
+/*
+.####..######...#######..##....##..######.
+..##..##....##.##.....##.###...##.##....##
+..##..##.......##.....##.####..##.##......
+..##..##.......##.....##.##.##.##..######.
+..##..##.......##.....##.##..####.......##
+..##..##....##.##.....##.##...###.##....##
+.####..######...#######..##....##..######.
+*/
 .icon-big {
     font-size: 350%;
     display: block;
@@ -102,7 +149,15 @@ h3 {
     margin-bottom: 10px;    
 }
 
-/* ===== LINKS ===== */
+/*
+.##.......####.##....##.##....##..######.
+.##........##..###...##.##...##..##....##
+.##........##..####..##.##..##...##......
+.##........##..##.##.##.#####.....######.
+.##........##..##..####.##..##.........##
+.##........##..##...###.##...##..##....##
+.########.####.##....##.##....##..######.
+*/
 a,
 a:visited {
     text-decoration: none;
@@ -199,10 +254,16 @@ button[type=submit]:active {
     margin-right: 55px;
 }
 
+/*
+.##.....##.########....###....########..########.########.
+.##.....##.##.........##.##...##.....##.##.......##.....##
+.##.....##.##........##...##..##.....##.##.......##.....##
+.#########.######...##.....##.##.....##.######...########.
+.##.....##.##.......#########.##.....##.##.......##...##..
+.##.....##.##.......##.....##.##.....##.##.......##....##.
+.##.....##.########.##.....##.########..########.##.....##
+*/
 
-/*=============================*/
-/*= HEADER                    =*/
-/*=============================*/
 header {
     background-image: linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)), url(img/back_ground.jpg);
     background-size: cover;
@@ -268,9 +329,17 @@ header {
 .main-nav li a:hover,
 .main-nav li a:active {border-bottom: 6px solid #02b200;}
 
-/*=============================*/
-/*= ABOUT ME                  =*/
-/*=============================*/
+
+/*
+....###....########...#######..##.....##.########....##.....##.########
+...##.##...##.....##.##.....##.##.....##....##.......###...###.##......
+..##...##..##.....##.##.....##.##.....##....##.......####.####.##......
+.##.....##.########..##.....##.##.....##....##.......##.###.##.######..
+.#########.##.....##.##.....##.##.....##....##.......##.....##.##......
+.##.....##.##.....##.##.....##.##.....##....##.......##.....##.##......
+.##.....##.########...#######...#######.....##.......##.....##.########
+*/
+
 .section-about-me {
     background-color: rgb(248, 248, 248); 
     -webkit-box-shadow: inset 0px 44px 36px -45px rgba(0,0,0,0.9);
@@ -278,9 +347,17 @@ header {
     box-shadow: inset 0px 44px 36px -45px rgba(0,0,0,0.9);
 }
 
-/*=============================*/
-/*= NEWS                      =*/
-/*=============================*/
+
+/*
+.##....##.########.##......##..######.
+.###...##.##.......##..##..##.##....##
+.####..##.##.......##..##..##.##......
+.##.##.##.######...##..##..##..######.
+.##..####.##.......##..##..##.......##
+.##...###.##.......##..##..##.##....##
+.##....##.########..###..###...######.
+*/
+
 .row-text-news {
     margin-bottom: 30px;
 }
@@ -293,10 +370,15 @@ header {
     width: 63px;    
 }
 
-/*=============================*/
-/*= SHOP                      =*/
-/*=============================*/
-
+/*
+..######..##.....##..#######..########.
+.##....##.##.....##.##.....##.##.....##
+.##.......##.....##.##.....##.##.....##
+..######..#########.##.....##.########.
+.......##.##.....##.##.....##.##.......
+.##....##.##.....##.##.....##.##.......
+..######..##.....##..#######..##.......
+*/
 .section-shop { 
     padding: 0; 
     cursor:pointer;
@@ -332,17 +414,32 @@ header {
     opacity: 1;
 }
 
-/*=============================*/
-/*= HOW TO BUY                =*/
-/*=============================*/
+
+/*
+.##.....##..#######..##......##....########..#######.....########..##.....##.##....##
+.##.....##.##.....##.##..##..##.......##....##.....##....##.....##.##.....##..##..##.
+.##.....##.##.....##.##..##..##.......##....##.....##....##.....##.##.....##...####..
+.#########.##.....##.##..##..##.......##....##.....##....########..##.....##....##...
+.##.....##.##.....##.##..##..##.......##....##.....##....##.....##.##.....##....##...
+.##.....##.##.....##.##..##..##.......##....##.....##....##.....##.##.....##....##...
+.##.....##..#######...###..###........##.....#######.....########...#######.....##...
+*/
+
 
 .section-how-to-buy {
     background-color: rgb(243, 243, 243); 
 }
 
-/*=============================*/
-/*= TESTIMONIALS              =*/
-/*=============================*/
+/*
+.########.########..######..########.####.##.....##..#######..##....##.####....###....##........######.
+....##....##.......##....##....##.....##..###...###.##.....##.###...##..##....##.##...##.......##....##
+....##....##.......##..........##.....##..####.####.##.....##.####..##..##...##...##..##.......##......
+....##....######....######.....##.....##..##.###.##.##.....##.##.##.##..##..##.....##.##........######.
+....##....##.............##....##.....##..##.....##.##.....##.##..####..##..#########.##.............##
+....##....##.......##....##....##.....##..##.....##.##.....##.##...###..##..##.....##.##.......##....##
+....##....########..######.....##....####.##.....##..#######..##....##.####.##.....##.########..######.
+*/
+
 .section-testimonials {
     background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),url(img/clients-says.jpg);
     background-size: cover;
@@ -381,9 +478,17 @@ cite img {
     vertical-align: middle;
 }
 
-/*=============================*/
-/*= CONTACTS                  =*/
-/*=============================*/
+
+/*
+..######...#######..##....##.########....###.....######..########..######.
+.##....##.##.....##.###...##....##......##.##...##....##....##....##....##
+.##.......##.....##.####..##....##.....##...##..##..........##....##......
+.##.......##.....##.##.##.##....##....##.....##.##..........##.....######.
+.##.......##.....##.##..####....##....#########.##..........##..........##
+.##....##.##.....##.##...###....##....##.....##.##....##....##....##....##
+..######...#######..##....##....##....##.....##..######.....##.....######.
+*/
+
 .section-contacts h3{
     text-transform: uppercase;
     text-align: center;
@@ -431,9 +536,24 @@ cite img {
     box-shadow: 10px 10px 36px -16px rgba(0,0,0,0.75);
 }
 
-/*=============================*/
-/*= CONTACT FORM              =*/
-/*=============================*/
+
+/*
+..######...#######..##....##.########....###.....######..########
+.##....##.##.....##.###...##....##......##.##...##....##....##...
+.##.......##.....##.####..##....##.....##...##..##..........##...
+.##.......##.....##.##.##.##....##....##.....##.##..........##...
+.##.......##.....##.##..####....##....#########.##..........##...
+.##....##.##.....##.##...###....##....##.....##.##....##....##...
+..######...#######..##....##....##....##.....##..######.....##...
+.########..#######..########..##.....##
+.##.......##.....##.##.....##.###...###
+.##.......##.....##.##.....##.####.####
+.######...##.....##.########..##.###.##
+.##.......##.....##.##...##...##.....##
+.##.......##.....##.##....##..##.....##
+.##........#######..##.....##.##.....##
+*/
+
 
 .contact-form {
     width: 90%;
@@ -469,9 +589,17 @@ textarea {
     color: white;
 }
 
-/*=============================*/
-/*= FOOTER                    =*/
-/*=============================*/
+
+/*
+.########..#######...#######..########.########.########.
+.##.......##.....##.##.....##....##....##.......##.....##
+.##.......##.....##.##.....##....##....##.......##.....##
+.######...##.....##.##.....##....##....######...########.
+.##.......##.....##.##.....##....##....##.......##...##..
+.##.......##.....##.##.....##....##....##.......##....##.
+.##........#######...#######.....##....########.##.....##
+*/
+
 footer {
     background-color: rgb(39, 39, 39);
     padding: 30px;
@@ -545,9 +673,16 @@ footer p {
     color: #888;
 }
 
-/*=============================*/
-/*= ICON BAR                  =*/
-/*=============================*/
+/*
+.####..######...#######..##....##....########.....###....########.
+..##..##....##.##.....##.###...##....##.....##...##.##...##.....##
+..##..##.......##.....##.####..##....##.....##..##...##..##.....##
+..##..##.......##.....##.##.##.##....########..##.....##.########.
+..##..##.......##.....##.##..####....##.....##.#########.##...##..
+..##..##....##.##.....##.##...###....##.....##.##.....##.##....##.
+.####..######...#######..##....##....########..##.....##.##.....##
+*/
+
 .icon-bar {
     width: 60px;
     background-color: #555;
@@ -587,9 +722,17 @@ footer p {
     box-shadow: 0px 10px 26px -10px rgba(0,0,0,0.9);
   }
 
-/*=============================*/
-/*= TO TOP                    =*/
-/*=============================*/
+
+/*
+.########..#######.....########..#######..########.
+....##....##.....##.......##....##.....##.##.....##
+....##....##.....##.......##....##.....##.##.....##
+....##....##.....##.......##....##.....##.########.
+....##....##.....##.......##....##.....##.##.......
+....##....##.....##.......##....##.....##.##.......
+....##.....#######........##.....#######..##.......
+*/
+
   #toTop {
     width:76px;
     height: 76px; 
@@ -624,7 +767,15 @@ footer p {
       left: -8px;
   }
 
-/* === END === */
+/*
+.########.##....##.########.
+.##.......###...##.##.....##
+.##.......####..##.##.....##
+.######...##.##.##.##.....##
+.##.......##..####.##.....##
+.##.......##...###.##.....##
+.########.##....##.########.
+*/
 
    
                     
