--- a/resources/css/style_shop.css
+++ b/resources/css/style_shop.css
@@ -8,7 +8,7 @@
 }
 
 html {
-    background-color: white;
+    background-color:white;
     color: #555;
     font-family: 'Alegreya Sans SC', sans-serif;
     font-size: 20px;
@@ -198,10 +198,15 @@ button[type=submit]:active {
 ..######..##.....##..#######..##.......
 */
 
-/* .shop-card {
+.shop-card {
     display: inline-block;
     position: relative;
-} */
+    background-color: #02b200;
+    color: white;
+    padding: 5px;
+    width: 200px;
+    height: auto;
+}
 
 .shop-photo > img{
     width: 100%;
@@ -215,4 +220,11 @@ button[type=submit]:active {
 
 .buy-check {
     width: 50px;
+    position: relative;
+    padding-left: 20px;
 }
+
+.setquantity h3 {
+    width: 50px;
+}
+
