--- a/resources/css/style_shopjuv.css
+++ b/resources/css/style_shopjuv.css
@@ -70,7 +70,7 @@ section {
 .##.....##.##.......##.....##.##.....##..##..##...###.##....##..##....##
 .##.....##.########.##.....##.########..####.##....##..######....######.
 */
-/* h1,
+h1,
 h2 {
     font-weight: 300;
     text-transform: uppercase;
@@ -90,7 +90,6 @@ h2 {
     text-align: center;
     margin-bottom: 30px;
     letter-spacing: 1px;
-    margin-top: 30px;
 }
 
 h2:after { display: block;
@@ -106,7 +105,7 @@ h3 {
     font-weight: 300;
     font-size: 100%;
     
-} */
+}
 
 /*
 .########.....###....########.....###.....######...########.....###....########..##.....##..######.
@@ -234,14 +233,63 @@ button[type=submit]:active {
 }
 
 /*
-.......##.##.....##.##.....##.########...#######..########.########...#######..##....##
-.......##.##.....##.###...###.##.....##.##.....##....##....##.....##.##.....##.###...##
-.......##.##.....##.####.####.##.....##.##.....##....##....##.....##.##.....##.####..##
-.......##.##.....##.##.###.##.########..##.....##....##....########..##.....##.##.##.##
-.##....##.##.....##.##.....##.##.....##.##.....##....##....##...##...##.....##.##..####
-.##....##.##.....##.##.....##.##.....##.##.....##....##....##....##..##.....##.##...###
-..######...#######..##.....##.########...#######.....##....##.....##..#######..##....##
+..######..##.....##..#######..########.
+.##....##.##.....##.##.....##.##.....##
+.##.......##.....##.##.....##.##.....##
+..######..#########.##.....##.########.
+.......##.##.....##.##.....##.##.......
+.##....##.##.....##.##.....##.##.......
+..######..##.....##..#######..##.......
 */
-.jumbotron {
-    background-color: #02b200;
+
+.shop-card {
+    display: inline-block;
+    position: relative;
+    color: white;
+    padding: 5px;
+    width: 200px;
+    height: auto;
+    -webkit-box-shadow: 0px 3px 40px -12px rgba(0,0,0,0.9);
+    -moz-box-shadow: 0px 3px 40px -12px rgba(0,0,0,0.9);
+    box-shadow: 0px 3px 40px -12px rgba(0,0,0,0.9);
 }
+
+.shop-photo > img{
+    width: 100%;
+    height: auto;   
+}
+
+.fieldquantity {
+    width: 100%;
+    padding: 0px 10px;
+    display: none;
+}
+
+.buy-check {
+    width: 50px;
+    position: relative;
+    padding-left: 20px;
+    padding-top: 2px;
+    color: #02b200;
+    font-weight: 400;
+}
+
+.header-quantity {
+    padding-top: 2px;
+    margin-right: 5px;
+}
+
+.quantity {
+    margin-left: 10px;
+    width: 50px;
+}
+
+.id {
+    position: absolute;
+    top: 10px;
+    left: 10px;
+    color: #039700;
+}
+
+
+
