--- a/resources/css/style_shopselect.css
+++ b/resources/css/style_shopselect.css
@@ -70,7 +70,7 @@ section {
 .##.....##.##.......##.....##.##.....##..##..##...###.##....##..##....##
 .##.....##.########.##.....##.########..####.##....##..######....######.
 */
-/* h1,
+h1,
 h2 {
     font-weight: 300;
     text-transform: uppercase;
@@ -106,7 +106,7 @@ h3 {
     font-weight: 300;
     font-size: 100%;
     
-} */
+}
 
 /*
 .########.....###....########.....###.....######...########.....###....########..##.....##..######.
@@ -234,14 +234,203 @@ button[type=submit]:active {
 }
 
 /*
-.......##.##.....##.##.....##.########...#######..########.########...#######..##....##
-.......##.##.....##.###...###.##.....##.##.....##....##....##.....##.##.....##.###...##
-.......##.##.....##.####.####.##.....##.##.....##....##....##.....##.##.....##.####..##
-.......##.##.....##.##.###.##.########..##.....##....##....########..##.....##.##.##.##
-.##....##.##.....##.##.....##.##.....##.##.....##....##....##...##...##.....##.##..####
-.##....##.##.....##.##.....##.##.....##.##.....##....##....##....##..##.....##.##...###
-..######...#######..##.....##.########...#######.....##....##.....##..#######..##....##
+..######..########.##.......########..######..########
+.##....##.##.......##.......##.......##....##....##...
+.##.......##.......##.......##.......##..........##...
+..######..######...##.......######...##..........##...
+.......##.##.......##.......##.......##..........##...
+.##....##.##.......##.......##.......##....##....##...
+..######..########.########.########..######.....##...
+..######..##.....##..#######..########.
+.##....##.##.....##.##.....##.##.....##
+.##.......##.....##.##.....##.##.....##
+..######..#########.##.....##.########.
+.......##.##.....##.##.....##.##.......
+.##....##.##.....##.##.....##.##.......
+..######..##.....##..#######..##.......
 */
-.jumbotron {
-    background-color: #02b200;
+.select-photo img{
+    width: 100%;
+    height: auto;
+    position: relative;
+    display: block;
+    margin: 0 auto;    
 }
+
+.header {
+    width: 100%;
+    text-align: center;
+    color: #02b200;
+    font-size: 190%;  
+    text-transform: uppercase;  
+    margin-top: 30px;
+}
+
+.select-shop {
+    height: 100vh;
+}
+
+.select-photo {
+    width: 100%;
+    height: auto;
+    transform: scale(1);
+    transition: transform 0.5s, opacity 0.5s, box-shadow 0.3s;
+    -webkit-box-shadow: 0px 0px 29px -9px rgba(0,0,0,0.9);
+    -moz-box-shadow: 0px 0px 29px -9px rgba(0,0,0,0.9);
+    box-shadow: 0px 0px 29px -9px rgba(0,0,0,0.9);
+}
+
+.select-photo:hover {
+    transform: scale(0.87);
+    -webkit-box-shadow: 0px 0px 0px 0px rgba(0,0,0,0.9);
+    -moz-box-shadow: 0px 0px 0px 0px rgba(0,0,0,0.9);
+    box-shadow: 0px 0px 0px 0px rgba(0,0,0,0.9); 
+
+}
+
+/*
+.########..#######...#######..########.########.########.
+.##.......##.....##.##.....##....##....##.......##.....##
+.##.......##.....##.##.....##....##....##.......##.....##
+.######...##.....##.##.....##....##....######...########.
+.##.......##.....##.##.....##....##....##.......##...##..
+.##.......##.....##.##.....##....##....##.......##....##.
+.##........#######...#######.....##....########.##.....##
+*/
+footer {
+    background-color: rgb(39, 39, 39);
+    padding: 30px;
+    font-size: 80%;
+}
+
+.footer-nav {
+    list-style: none;
+    float: left;
+}
+
+.social-links {
+    list-style: none;
+    float: right; 
+
+}
+
+.footer-nav li,
+.social-links li {
+    display: inline-block;
+    margin-right: 20px;
+}
+
+.footer-nav li:last-child,
+.social-links li:last-child {
+    margin-right: 0px;
+}
+
+.footer-nav li a:link,
+.footer-nav li a:visited,
+.social-links li a:link,
+.social-links li a:visited {
+    text-decoration: none;
+    border: 0px;
+    color: #888;
+    transition: color 0.2s;
+}
+
+.footer-nav li a:hover,
+.footer-nav li a:active {
+    color: #039700;
+}
+
+.social-links li a:link,
+.social-links li a:visited {
+    font-size: 170%;
+
+}
+
+.facebook,
+.twitter,
+.insta {
+    transition: color 0.2s;
+}
+
+.facebook:hover {
+    color: #3b5998;
+}
+
+.twitter:hover {
+    color: #55acee;
+}
+
+.insta:hover {
+    color: #e95950;
+}
+
+footer p {
+    margin-top: 20px;
+    text-align: center;
+    color: #888;
+}
+
+/*
+.########..#######.....########..#######..########.
+....##....##.....##.......##....##.....##.##.....##
+....##....##.....##.......##....##.....##.##.....##
+....##....##.....##.......##....##.....##.########.
+....##....##.....##.......##....##.....##.##.......
+....##....##.....##.......##....##.....##.##.......
+....##.....#######........##.....#######..##.......
+*/
+
+#toTop {
+    width:76px;
+    height: 76px; 
+    position: fixed; 
+    bottom: 30px; /* отступ кнопки от нижнего края страницы*/
+    right:20px;
+  }
+
+  #toTopImg:hover {
+    color: #555;
+  }
+
+  .toTopBackGround {
+    width: 60px;
+    height: 60px;
+    background: white;
+    bottom: 30px; /* отступ кнопки от нижнего края страницы*/
+    right:20px;
+    cursor:pointer;
+    border-radius: 50%;
+    -webkit-box-shadow: 10px 10px 26px -10px rgba(0,0,0,0.95);
+    -moz-box-shadow: 10px 10px 26px -10px rgba(0,0,0,0.85);
+    box-shadow: 10px 10px 26px -10px rgba(0,0,0,0.9);
+    z-index: 2000;
+    font-size: 76px; 
+  }
+
+  #toTopImg {
+      color: #02b200;
+      position: relative; 
+      top: -8px;
+      left: -8px;
+  }
+
+  .toTopBackGround a {
+      border: 0;
+      position: absolute;
+      top: -10px;
+      left: -10px;
+      padding-left: 10px;
+      padding-top: 10px;
+      width: 73px;
+      height: 73px;
+  }
+
+/*
+.########.##....##.########.
+.##.......###...##.##.....##
+.##.......####..##.##.....##
+.######...##.##.##.##.....##
+.##.......##..####.##.....##
+.##.......##...###.##.....##
+.########.##....##.########.
+*/
