dosnt work js on about opage

--- a/resources/css/style_aboutme.css
+++ b/resources/css/style_aboutme.css
@@ -192,14 +192,20 @@ header {
     border-bottom: 2px solid #02b200;
 }
 
-/*=============================*/
-/*= TO TOP                    =*/
-/*=============================*/
+/*
+.########..#######..########..#######..########.
+....##....##.....##....##....##.....##.##.....##
+....##....##.....##....##....##.....##.##.....##
+....##....##.....##....##....##.....##.########.
+....##....##.....##....##....##.....##.##.......
+....##....##.....##....##....##.....##.##.......
+....##.....#######.....##.....#######..##.......
+*/
 #toTop {
 width:76px;
    height: 76px;  
    position: fixed; 
-   bottom: 30px; /* отступ кнопки от нижнего края страницы*/
+   bottom: -80px; /* отступ кнопки от нижнего края страницы*/
    right:20px;
  }
 
@@ -229,28 +235,5 @@ width:76px;
      top: -8px;
      left: -8px;
  }
-
-
-/* #toTop {
-    width:76px;
-    height: 76px;
-    background: white;
-    text-align:center;
-    position: fixed;;
-    bottom: 30px; /* отступ кнопки от нижнего края страницы
-    right:20px;
-    cursor:pointer;
-    color:#02b200;
-    z-index: 2000;
-    font-size: 76px;    
-    border-radius: 50%;
-    -webkit-box-shadow: 10px 10px 26px -10px rgba(0,0,0,0.75);
-    -moz-box-shadow: 10px 10px 26px -10px rgba(0,0,0,0.75);
-    box-shadow: 10px 10px 26px -10px rgba(0,0,0,0.75);   
-  }
-  
-  #toTop:hover {
-    color: #555;
-  } */
 
 /* === END === */
