--- a/resources/css/style_shopjuv.css
+++ b/resources/css/style_shopjuv.css
@@ -291,5 +291,56 @@ button[type=submit]:active {
     color: #039700;
 }
 
+/*
+.########..#######.....########..#######..########.
+....##....##.....##.......##....##.....##.##.....##
+....##....##.....##.......##....##.....##.##.....##
+....##....##.....##.......##....##.....##.########.
+....##....##.....##.......##....##.....##.##.......
+....##....##.....##.......##....##.....##.##.......
+....##.....#######........##.....#######..##.......
+*/
 
+#toTop {
+    width:76px;
+    height: 76px; 
+    position: fixed; 
+    bottom: -80px; /* отступ кнопки от нижнего края страницы*/
+    right:20px;
+  }
 
+  #toTopImg:hover {
+    color: #555;
+  }
+
+  .toTopBackGround {
+    width: 60px;
+    height: 60px;
+    background: white;
+    bottom: 30px; /* отступ кнопки от нижнего края страницы*/
+    right:20px;
+    cursor:pointer;
+    border-radius: 50%;
+    -webkit-box-shadow: 10px 10px 26px -10px rgba(0,0,0,0.95);
+    -moz-box-shadow: 10px 10px 26px -10px rgba(0,0,0,0.85);
+    box-shadow: 10px 10px 26px -10px rgba(0,0,0,0.9);
+    z-index: 2000;
+    font-size: 76px; 
+  }
+
+  #toTopImg {
+      color: #02b200;
+      position: relative; 
+      top: -8px;
+      left: -8px;
+  }
+
+/*
+.########.##....##.########.
+.##.......###...##.##.....##
+.##.......####..##.##.....##
+.######...##.##.##.##.....##
+.##.......##..####.##.....##
+.##.......##...###.##.....##
+.########.##....##.########.
+*/
