--- a/resources/css/style_shopjuv.css
+++ b/resources/css/style_shopjuv.css
@@ -242,6 +242,10 @@ button[type=submit]:active {
 ..######..##.....##..#######..##.......
 */
 
+.header {
+    margin-top: 30px;
+}
+
 .shop-card {
     display: inline-block;
     position: relative;
